replace quote with new one

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="front"></div>
             <div class="card">
                 <div class="text">
-                    "May our love shine bright this Diwali. Happy celebrations!"<br><br></div>
+                    In Diwali's glow, our bond shines brighter. Happy celebrations!</div>
                 <div class="texts" id="my-love">#khadus</div>
                 <div class="heart" </div>
                 </div>
