--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #fdc3c9;
+        background-color: #000;
         overflow: hidden;
     }
 
